cmake_minimum_required(VERSION 3.2)
project(ImageNet200)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

SET(CMAKE_FIND_LIBRARY_PREFIXES "lib64;lib")
SET(CMAKE_FIND_LIBRARY_SUFFIXES ".so;.a")
SET(CMAKE_SIZEOF_VOID_P "8")

SET(OpenCV_STATIC OFF)
FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

set(SOURCE_FILES main.cpp)
add_executable(ImageNet200 ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(ImageNet200 ${OpenCV_LIBS})